fix api generate doc
